@@ -45,6 +45,8 @@ $color-grey-3: #d9d9d9;
 $color-grey-4: #e6e6e6;
 $color-grey-5: #fafafa;
 
+$color-menu-text: #cacaca; // was #aaa wich was too low contrast
+
 $color-thead-bg: $color-grey-5;
 $color-header-bg: $color-teal; // #ff6a58;
 $color-fieldset-hover: $color-grey-5;
@@ -78,6 +80,3 @@ $font-serif: Roboto Slab, Georgia, serif;
 // misc sizing
 $thumbnail-width: 130px;
 $menu-width: 180px;
-
-
-
