@@ -6,7 +6,7 @@ ul.listing {
 
 .listing {
     margin-bottom: 2em;
-    color: lighten($color-text-base, 20%);
+    color: lighten($color-text-base, 10%);
     font-size: 0.95em;
 
     ul {
