@@ -81,7 +81,7 @@ dl {
 }
 
 dt {
-    color: darken($color-grey-3, 5%);
+    color: darken($color-grey-3, 15%);
     text-transform: uppercase;
     font-size: 0.9em;
 }
