@@ -85,6 +85,7 @@
     > h2 {
         -webkit-font-smoothing: auto;
         background: $color-salmon-light;
+        color: #200200;
         text-transform: uppercase;
         padding: 0.9em 0 0.9em 4.1em;
         font-size: 0.95em;
